[gd_scene load_steps=7 format=3 uid="uid://cwcdyhatvgvvu"]

[ext_resource type="Script" path="res://scenes/lobby/lobby_player.gd" id="1_k40ly"]
[ext_resource type="Texture2D" uid="uid://kh0e801gsx1l" path="res://assets/player.png" id="2_s2x8m"]

[sub_resource type="Animation" id="Animation_w4i6p"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hvs6d"]
_data = {
"idle": SubResource("Animation_w4i6p")
}

[sub_resource type="SystemFont" id="SystemFont_yibyy"]
font_weight = 100

[sub_resource type="Theme" id="Theme_ndyq3"]
default_font = SubResource("SystemFont_yibyy")
default_font_size = 28

[node name="LobbyPlayer" type="Node2D"]
script = ExtResource("1_k40ly")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("2_s2x8m")
hframes = 5
vframes = 3
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
method_call_mode = 1
libraries = {
"": SubResource("AnimationLibrary_hvs6d")
}

[node name="Name" type="Label" parent="."]
custom_minimum_size = Vector2(300, 20)
offset_left = -150.0
offset_top = -122.0
offset_right = 150.0
offset_bottom = -85.0
theme = SubResource("Theme_ndyq3")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="HB" type="HBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = 86.0
offset_right = 1170.0
offset_bottom = 123.0
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Previous" type="Button" parent="HB"]
layout_mode = 2
text = "Prev"

[node name="Next" type="Button" parent="HB"]
layout_mode = 2
text = "Next"

[node name="SkinName" type="Label" parent="HB"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = SubResource("Theme_ndyq3")
text = "Skin 1"
vertical_alignment = 1

[connection signal="pressed" from="HB/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="HB/Next" to="." method="_on_next_pressed"]
